# near-market

./: .gitignore  build.sh  check-outcome-tokens.js  check-usdc-balance.js  configure.sh  deploy.sh  latest_market.json  postgres-storage-example.rs  solver-daemon.js  status.sh  supabase-indexes.sql  supabase-schema.sql  supabase-setup.md  test-buy-sell-realistic.js  test-intent-focused.js  usdc-addresses.json
contracts/ctf/: Cargo.toml
contracts/ctf/src/: lib.rs
contracts/monitor/: Cargo.toml
contracts/monitor/src/: lib.rs
contracts/resolver/: Cargo.toml
contracts/resolver/src/: lib.rs
contracts/solver/: Cargo.toml
contracts/solver/res/: solver.wasm
contracts/solver/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
frontend/: package-lock.json  package.json  package.update.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/market/[id]/: page-old.tsx  page.tsx
frontend/src/components/: WebSocketStatus.tsx  create-market-modal.tsx  debug-test.tsx  discussion-thread.tsx  market-card.tsx  market-chart.tsx  market-list.tsx  near-wallet.tsx  orderbook.tsx  prediction-swipe-card.tsx  prediction-swipe-interface.tsx  tinder-card-stack.tsx  trading-interface.tsx
frontend/src/components/orderbook/: LivePriceDisplay.tsx  OrderbookChart.tsx  OrderbookIntegration.tsx  OrderbookWidget.tsx  TradeHistory.tsx  TradingWidget.tsx  index.ts
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  textarea.tsx
frontend/src/config/: orderbook.ts
frontend/src/contexts/: OrderbookContext.tsx
frontend/src/hooks/: useGlobalWebSocket.ts  useOrderbook.ts
frontend/src/lib/: near-wallet-selector.ts  near.ts  utils.ts  wallet-manager.ts  wallet-types.ts
frontend/src/lib/wallet-connectors/: metamask-wallet.ts  near-wallet.ts  walletconnect-wallet.ts
frontend/src/services/: globalWebSocket.ts  market.ts  orderbook.ts  websocket.ts
orderbook-service/: .env.example  Cargo.toml  README.md  check_trades.js  test-logging.sh  test_contract_call.js  test_db_connection.rs  test_key.rs  test_order_update.js  test_runner.sh
orderbook-service/src/: lib.rs  main.rs  solver_integration.rs  types.rs  ui.rs
orderbook-service/src/api/: handlers.rs  mod.rs
orderbook-service/src/collateral/: mod.rs
orderbook-service/src/matching/: engine.rs  mod.rs  settlement.rs
orderbook-service/src/near_client/: mod.rs
orderbook-service/src/storage/: factory.rs  mod.rs  simple_postgres.rs
orderbook-service/tests/: extended_matching_tests.rs  matching_algorithm_test.rs
res/: ctf.wasm  monitor.wasm  resolver.wasm  solver.wasm  verifier.wasm
scripts/: deploy_testnet.sh
