[package]
name = "prediction-ctf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.17.1", features = ["legacy"] }
borsh = { version = "1.0", features = ["derive"] }
hex = "0.4"
schemars = { version = "0.8", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

# Independent workspace to avoid conflicts
[workspace]